@@ -8,6 +8,7 @@ CHANGELOG for Fall of Eden
 Version 0.3n
 ------------
 * Lei can now give you some advice on how to handle Krawitz.
+* Fixed a bug with lactation.
 
 --------------------------------------------
              PREVIOUS VERSIONS
